--- a/app/src/main/res/layout/activity_loginpage.xml
+++ b/app/src/main/res/layout/activity_loginpage.xml
@@ -55,14 +55,17 @@
         android:text="Log In"
         android:layout_centerHorizontal="true"
         />
+
     <TextView
+        android:id="@+id/forgotpass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/forgotpass"
         android:layout_below="@id/loginbutton"
-        android:text="Forgot password?"
-        android:textColor="@color/blue"
         android:layout_centerHorizontal="true"
-        android:layout_margin="10dp"
-        />
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:text="Forgot password?"
+        android:textColor="@color/blue"/>
 </RelativeLayout>
