--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="blue">#0610FC</color>
+    <color name="blue">#757AF4</color>
+    <color name="aqua">#1A90C6</color>
+    <color name="red">#8A0900</color>
+
 </resources>
