--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="blue">#757AF4</color>
     <color name="aqua">#1A90C6</color>
     <color name="red">#8A0900</color>
+    <color name="gray">#7E7D7D</color>
 
 </resources>
