--- a/app/src/main/res/layout/activity_signuppage.xml
+++ b/app/src/main/res/layout/activity_signuppage.xml
@@ -12,19 +12,23 @@
         android:src="@drawable/loginphoto"
         android:id="@+id/logphoto"
         />
+
     <EditText
+        android:id="@+id/username1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/username1"
         android:layout_below="@+id/logphoto"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@color/blue"
-        android:hint="Username"
-        android:textColorHint="@color/white"
-        android:textColor="@color/white"
-        android:layout_margin="10dp"
-        android:padding="20dp"
         android:drawableLeft="@drawable/baseline_person_outline_24"
-        android:drawablePadding="20dp"/>
+        android:drawablePadding="20dp"
+        android:hint="Username"
+        android:padding="20dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white" />
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
