--- a/app/src/main/res/layout/fragment_mealmanagment.xml
+++ b/app/src/main/res/layout/fragment_mealmanagment.xml
@@ -15,19 +15,19 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="<-"
+            android:text="←"
             android:textColor="@color/blue"
             android:backgroundTint="@color/white"
             android:textStyle="bold"
             android:onClick="previousMonthAction"
-            android:textSize="20dp"/>
+            android:textSize="20sp"/>
         <TextView
             android:id="@+id/monthYearTV"
             android:layout_width="0dp"
             android:layout_weight="2"
             android:layout_height="wrap_content"
             android:text="Sep 2023"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textAlignment="center"
             android:textColor="@color/black"
             />
@@ -36,12 +36,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="->"
+            android:text="→"
             android:textColor="@color/blue"
             android:backgroundTint="@color/white"
             android:textStyle="bold"
             android:onClick="nextMonthAction"
-            android:textSize="20dp"/>
+            android:textSize="20sp"/>
 
 
     </LinearLayout>
