--- a/app/src/main/res/layout/activity_signuppage.xml
+++ b/app/src/main/res/layout/activity_signuppage.xml
@@ -25,7 +25,7 @@
         android:background="@color/blue"
         android:drawableLeft="@drawable/baseline_person_outline_24"
         android:drawablePadding="20dp"
-        android:hint="Full Name"
+        android:hint="Username"
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
@@ -45,22 +45,8 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/mobileNumber"
-        android:layout_below="@+id/email"
-        android:background="@color/blue"
-        android:hint="Mobile Number"
-        android:textColorHint="@color/white"
-        android:textColor="@color/white"
-        android:layout_margin="10dp"
-        android:padding="20dp"
-        android:drawableLeft="@drawable/baseline_phone_24"
-        android:drawablePadding="20dp"
-        android:inputType="phone"/>
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/signuppass"
-        android:layout_below="@+id/mobileNumber"
+        android:layout_below="@+id/email"
         android:background="@color/blue"
         android:hint="Password"
         android:textColorHint="@color/white"
@@ -84,16 +70,15 @@
         android:drawableLeft="@drawable/baseline_key_24"
         android:drawablePadding="20dp"
         android:inputType="textPassword"/>
-
     <Button
-        android:id="@+id/signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/resignuppass"
-        android:layout_margin="20dp"
-        android:layout_marginTop="95dp"
-        android:layout_marginBottom="20dp"
+        android:id="@+id/signup"
         android:text="Sign Up"
-        android:textSize="25dp" />
+        android:textSize="25dp"
+        android:layout_below="@+id/resignuppass"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="20dp"
+        />
 
 </RelativeLayout>
