--- a/app/src/main/res/layout/activity_signuppage.xml
+++ b/app/src/main/res/layout/activity_signuppage.xml
@@ -43,6 +43,7 @@
         android:drawableLeft="@drawable/baseline_email_24"
         android:drawablePadding="20dp"
         android:hint="Email"
+        android:inputType="textEmailAddress"
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
