--- a/app/src/main/res/layout/activity_loginpage.xml
+++ b/app/src/main/res/layout/activity_loginpage.xml
@@ -14,7 +14,7 @@
         />
 
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/email1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/logphoto"
@@ -23,9 +23,10 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="@color/blue"
-        android:drawableLeft="@drawable/baseline_person_outline_24"
+        android:drawableLeft="@drawable/baseline_email_24"
         android:drawablePadding="20dp"
-        android:hint="UserName"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
@@ -34,7 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/password"
-        android:layout_below="@+id/username"
+        android:layout_below="@+id/email1"
         android:background="@color/blue"
         android:hint="Password"
         android:inputType="textPassword"
