--- a/app/src/main/res/layout/activity_signuppage.xml
+++ b/app/src/main/res/layout/activity_signuppage.xml
@@ -28,6 +28,7 @@
         android:drawablePadding="20dp"
         android:hint="Full Name"
         android:padding="20dp"
+        android:singleLine="true"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
 
