--- a/app/src/main/res/layout/activity_forgot_pass_page.xml
+++ b/app/src/main/res/layout/activity_forgot_pass_page.xml
@@ -12,10 +12,10 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Password recovery"
-        android:textStyle="bold"
+        android:gravity="center"
+        android:text="@string/password_recovery"
         android:textSize="30sp"
-        android:gravity="center" />
+        android:textStyle="bold" />
 
     <TextView
         android:layout_width="match_parent"
