--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,12 @@
         android:id="@+id/welcome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="30dp"
         android:gravity="center"
-        android:text="Welcome To"
+        android:text="@string/welcome"
         android:textColor="@color/blue"
         android:textSize="20dp"
         android:textStyle="bold" />
@@ -21,9 +24,12 @@
         android:id="@+id/healthcare"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="60dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="60dp"
         android:gravity="center"
-        android:text="Health Care"
+        android:text="@string/health_care"
         android:textColor="@color/blue"
         android:textSize="32dp"
         android:textStyle="bold" />
@@ -45,7 +51,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/blue"
-        android:text="Sign Up" />
+        android:text="@string/signup" />
 
     <Button
         android:id="@+id/loginbtn"
@@ -55,38 +61,37 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:backgroundTint="@color/blue"
-        android:text="Log In" />
+        android:text="@string/login" />
 
     <Button
-        android:layout_marginTop="10dp"
         android:id="@+id/swedish"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/page"
         android:layout_marginLeft="90dp"
+        android:layout_marginTop="10dp"
         android:backgroundTint="@color/blue"
-        android:text="Svenska"
-        />
+        android:text="@string/swedish" />
 
     <Button
         android:id="@+id/english"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/page"
-        android:layout_marginTop="10dp"
         android:layout_marginLeft="210dp"
+        android:layout_marginTop="10dp"
         android:backgroundTint="@color/blue"
-        android:text="English" />
+        android:text="@string/english" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Language:"
         android:layout_below="@id/page"
-        android:layout_marginTop="22dp"
-        android:textStyle="bold"
         android:layout_marginLeft="10dp"
-        android:textColor="@color/black"/>
+        android:layout_marginTop="22dp"
+        android:text="@string/language"
+        android:textColor="@color/black"
+        android:textStyle="bold" />
 
 
 
