--- a/app/src/main/res/layout/activity_signuppage.xml
+++ b/app/src/main/res/layout/activity_signuppage.xml
@@ -12,7 +12,7 @@
         android:src="@drawable/loginphoto"
         android:id="@+id/logphoto"
         />
- 
+
 
     <EditText
         android:id="@+id/username1"
@@ -26,7 +26,7 @@
         android:background="@color/blue"
         android:drawableLeft="@drawable/baseline_person_outline_24"
         android:drawablePadding="20dp"
-        android:hint="Full Name"
+        android:hint="@string/full_name"
         android:padding="20dp"
         android:singleLine="true"
         android:textColor="@color/white"
@@ -44,26 +44,29 @@
         android:background="@color/blue"
         android:drawableLeft="@drawable/baseline_email_24"
         android:drawablePadding="20dp"
-        android:hint="Email"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
-  
-       <EditText              
+
+    <EditText
+        android:id="@+id/mobileNumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-           android:layout_below="@id/email"
-        android:hint="Mobile Number"
-        android:id="@+id/mobileNumber"
-        android:textColorHint="@color/white"
-        android:textColor="@color/white"
-           android:background="@color/blue"
-        android:layout_margin="10dp"
-        android:padding="20dp"
+        android:layout_below="@id/email"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@color/blue"
         android:drawableLeft="@drawable/baseline_phone_24"
         android:drawablePadding="20dp"
-        android:inputType="phone"/>
+        android:hint="@string/mobile_number"
+        android:inputType="phone"
+        android:padding="20dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white" />
 
     <EditText
         android:id="@+id/signuppass"
@@ -77,7 +80,7 @@
         android:background="@color/blue"
         android:drawableLeft="@drawable/baseline_key_24"
         android:drawablePadding="20dp"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:padding="20dp"
         android:textColor="@color/white"
@@ -95,7 +98,7 @@
         android:background="@color/blue"
         android:drawableLeft="@drawable/baseline_key_24"
         android:drawablePadding="20dp"
-        android:hint="Re-Password"
+        android:hint="@string/password_re"
         android:inputType="textPassword"
         android:padding="20dp"
         android:textColor="@color/white"
@@ -111,7 +114,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
-        android:text="Sign Up"
+        android:text="@string/signup"
         android:textSize="25sp" />
 
 </RelativeLayout>
