--- a/app/src/main/res/layout/fragment_emailus.xml
+++ b/app/src/main/res/layout/fragment_emailus.xml
@@ -10,15 +10,15 @@
         android:src="@drawable/doctor_email" />
 
     <TextView
+        android:id="@+id/emailuson"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/email_doc"
-        android:text="Email Us On"
         android:layout_centerHorizontal="true"
-        android:textSize="30dp"
-        android:textStyle="bold"
+        android:text="@string/email_us"
         android:textColor="@color/black"
-        android:id="@+id/emailuson"/>
+        android:textSize="30dp"
+        android:textStyle="bold" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
