--- a/app/src/main/res/layout/fragment_mealmanagment.xml
+++ b/app/src/main/res/layout/fragment_mealmanagment.xml
@@ -4,17 +4,17 @@
     android:layout_height="match_parent"
     android:background="@color/blue"
     android:orientation="vertical">
-    
+
     <TextView
         android:id="@+id/MyDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Select the Date"
+        android:layout_marginLeft="125dp"
+        android:layout_marginTop="48dp"
+        android:text="@string/select_date"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="23sp"
-        android:layout_marginLeft="125dp"
-        android:layout_marginTop="48dp"/>
+        android:textSize="23sp" />
 
     <LinearLayout
         android:layout_marginTop="48dp"
@@ -37,15 +37,15 @@
 
     <Button
         android:id="@+id/calandarBtn"
-        android:layout_marginLeft="150dp"
-        android:layout_marginTop="34dp"
-        android:paddingRight="20dp"
-        android:paddingLeft="20dp"
-        android:text="Edit"
-        android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/white"/>
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="34dp"
+        android:backgroundTint="@color/white"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:text="@string/edit"
+        android:textColor="@color/black" />
 
 
 </LinearLayout>
