--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -22,7 +22,10 @@
                     android:id="@+id/nav_accountsettings"
                     android:icon="@drawable/baseline_account_circle_24"
                     android:title="Profile Settings" />
-
+                <item
+                    android:id="@+id/elderlysignup"
+                    android:icon="@drawable/signupelderly"
+                    android:title="Sign up Elderly" />
                 <item
                     android:id="@+id/nav_logout"
                     android:icon="@drawable/baseline_logout_24"
