--- a/app/src/main/res/layout/activity_signuppage.xml
+++ b/app/src/main/res/layout/activity_signuppage.xml
@@ -48,21 +48,24 @@
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
-  
-       <EditText              
+
+    <EditText
+        android:id="@+id/mobileNumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-           android:layout_below="@id/email"
-        android:hint="Mobile Number"
-        android:id="@+id/mobileNumber"
-        android:textColorHint="@color/white"
-        android:textColor="@color/white"
-           android:background="@color/blue"
-        android:layout_margin="10dp"
-        android:padding="20dp"
+        android:layout_below="@id/email"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@color/blue"
         android:drawableLeft="@drawable/baseline_phone_24"
         android:drawablePadding="20dp"
-        android:inputType="phone"/>
+        android:hint="Mobile Number"
+        android:inputType="phone"
+        android:padding="20dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white" />
 
     <EditText
         android:id="@+id/signuppass"
