Extracted more hardcoded strings, and strings for most toasts for both languages. Changed the String array for meal management as well

--- a/app/src/main/res/layout/activity_mealmanagment.xml
+++ b/app/src/main/res/layout/activity_mealmanagment.xml
@@ -22,7 +22,7 @@
             android:elevation="4dp"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:title="Home"/>
+            app:title="@string/home"/>
 
         <FrameLayout
             android:id="@+id/fragment_container"
