--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -26,7 +26,7 @@
                 <item
                     android:id="@+id/elderlysignup"
                     android:icon="@drawable/signupelderly"
-                    android:title="Sign up Elderly" />
+                    android:title="@string/signup_elderly" />
                 <item
                     android:id="@+id/nav_logout"
                     android:icon="@drawable/baseline_logout_24"
